# caa_encrypted_vault

./: .gitignore  Cargo.toml  README.md
doc/: report.md
src/: client.rs  constant.rs  file_n_metadata.rs  main.rs  server.rs  vault.rs
